# multi-agent-orchestration

./: .gitignore  README.md  pyproject.toml
orchestration/: __init__.py  accessibility_orchestrator.py  base_orchestrator.py  conditional_orchestrator.py  config.py  dream_cascade_orchestrator.py  dream_swarm_orchestrator.py  iterative_orchestrator.py  models.py  sequential_orchestrator.py  streaming.py  utils.py
orchestration/templates/: orchestrator_template.py
